--- a/.htaccess
+++ b/.htaccess
@@ -5,7 +5,10 @@ RewriteEngine on
 RewriteRule ^(.*)\/(\?.*)?$ $1$2 [R=301,L]
 
 #Redirects
-RewriteRule ^$ index.php [QSA,L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ /index.php?/$1 [L]
+
 RewriteRule ^admin$ php/admin.php [QSA,L]
 RewriteRule ^blog/(.*)$ php/blog.php?title=$1 [QSA,L]
 RewriteRule ^sitemap.xml$ php/sitemap.php [QSA,L]
