--- a/.htaccess
+++ b/.htaccess
@@ -17,3 +17,16 @@ RewriteRule ^admin$ php/admin.php [QSA,L]
 RewriteRule ^blog/(.*)$ php/blog.php?title=$1 [QSA,L]
 RewriteRule ^sitemap.xml$ php/sitemap.php [QSA,L]
 RewriteRule ^$ home.php [QSA,L]
+
+#GZip
+<IfModule mod_deflate.c>
+AddOutputFilterByType DEFLATE text/plain
+AddOutputFilterByType DEFLATE text/html
+AddOutputFilterByType DEFLATE text/xml
+AddOutputFilterByType DEFLATE text/css
+AddOutputFilterByType DEFLATE application/xml
+AddOutputFilterByType DEFLATE application/xhtml+xml
+AddOutputFilterByType DEFLATE application/rss+xml
+AddOutputFilterByType DEFLATE application/javascript
+AddOutputFilterByType DEFLATE application/x-javascript
+</IfModule>
