--- a/.htaccess
+++ b/.htaccess
@@ -12,11 +12,12 @@ RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
 RewriteRule ^(.*)$ http://%1%{REQUEST_URI} [R=301,QSA,NC,L]
 
-#Redirects
-RewriteRule ^admin$ php/admin.php [QSA,L]
-RewriteRule ^blog/(.*)$ php/blog.php?title=$1 [QSA,L]
-RewriteRule ^sitemap.xml$ php/sitemap.php [QSA,L]
-RewriteRule ^$ home.php [QSA,L]
+#Remove .html
+RewriteCond %{THE_REQUEST} /([^.]+)\.html [NC]
+RewriteRule ^ /%1 [NC,L,R]
+
+RewriteCond %{REQUEST_FILENAME}.html -f
+RewriteRule ^ %{REQUEST_URI}.html [NC,L]
 
 #GZip
 <IfModule mod_deflate.c>
