--- a/.htaccess
+++ b/.htaccess
@@ -19,6 +19,9 @@ RewriteRule ^ /%1 [NC,L,R]
 RewriteCond %{REQUEST_FILENAME}.html -f
 RewriteRule ^ %{REQUEST_URI}.html [NC,L]
 
+# 404
+ErrorDocument 404 https://franckdemoute.fr
+
 #GZip
 <IfModule mod_deflate.c>
 AddOutputFilterByType DEFLATE text/plain
