fix: Improve cache

--- a/.htaccess
+++ b/.htaccess
@@ -36,11 +36,7 @@ AddOutputFilterByType DEFLATE application/x-javascript
 </IfModule>
 
 #Cache
-# One year for image files
-<filesMatch ".(jpg|jpeg|png|gif|ico|webp)$">
+# One year for static files
+<filesMatch ".(jpg|jpeg|png|gif|ico|webp|ttf|css|js)$">
 Header set Cache-Control "max-age=31536000, public"
-</filesMatch>
-# One month for css and js
-<filesMatch ".(css|js)$">
-Header set Cache-Control "max-age=2628000, public"
 </filesMatch>
