--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 on:
   workflow_dispatch:
   push:
-    tags:
-    - '*'
+    branches:
+      - main
 name: 🚀 Deploy website on push
 jobs:
   web-deploy:
