fix: Run deploy workflow after age update

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,9 @@
 on:
   workflow_dispatch:
+  workflow_run:
+    workflows: ["Update Age Annually"]
+    types:
+      - completed
   push:
     branches:
       - master
