fix: Working contact form

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 NEXT_PUBLIC_GTM =
 NEXT_PUBLIC_APP_URL = 
-GMAIL_PASSKEY = 
-EMAIL_ADDRESS =
+EMAIL_HOST = 
+EMAIL_PORT = 
+EMAIL_ADDRESS = 
+EMAIL_PASSWORD = 
