--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,7 +1,7 @@
 on:
   push:
     branches:
-      - main
+      - master
 name: release-please
 jobs:
   release-please:
@@ -11,5 +11,5 @@ jobs:
         with:
           release-type: node
           bump-minor-pre-major: true
-          default-branch: main
+          default-branch: master
           command: manifest
