--- a/.github/workflows/deploy-to-vercel.yml
+++ b/.github/workflows/deploy-to-vercel.yml
@@ -2,11 +2,10 @@ name: Vercel Deployment
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+
 on:
-  push:
-    # Pattern matched against refs/tags
-    tags:        
-      - '*' # Push events to every tag not containing /
+  release:
+    types: [published]
 jobs:
   Deploy-Production:
     runs-on: ubuntu-latest
