--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "franckdemoute.fr",
   "version": "5.0.6",
   "description": "Portfolio of Franck Demoute",
+  "packageManager": "pnpm@9.15.1",
   "private": true,
   "scripts": {
     "preinstall": "npx only-allow pnpm",
