fix: Update licence in package.json

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "git+https://github.com/Zenoo/franckdemoute.fr.git"
   },
   "author": "Zenoo",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Zenoo/franckdemoute.fr/issues"
   },
