--- a/package.json
+++ b/package.json
@@ -42,14 +42,15 @@
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.4",
+    "@tailwindcss/postcss": "^4.1.8",
     "@types/node": "^22.10.2",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.0.2",
     "autoprefixer": "latest",
     "eslint": "latest",
     "eslint-config-next": "15.1.1",
-    "postcss": "latest",
+    "postcss": "^8.5.3",
     "sass": "^1.69.5",
-    "tailwindcss": "latest"
+    "tailwindcss": "^4.1.8"
   }
 }
